--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,65 @@
-.DS_Store
-.idea
-*.log
-tmp/
-.directory
+# Created by https://www.toptal.com/developers/gitignore/api/emacs,dotfilessh
+# Edit at https://www.toptal.com/developers/gitignore?templates=emacs,dotfilessh
+
+### DotfilesSh ###
+local-patch
+patched-src
+
+### Emacs ###
+# -*- mode: gitignore; -*-
+*~
+\#*\#
+/.emacs.desktop
+/.emacs.desktop.lock
+*.elc
+auto-save-list
+tramp
+.\#*
+
+# Org-mode
+.org-id-locations
+*_archive
+ltximg/**
+
+# flymake-mode
+*_flymake.*
+
+# eshell files
+/eshell/history
+/eshell/lastdir
+
+# elpa packages
+/elpa/
+
+# reftex files
+*.rel
+
+# AUCTeX auto folder
+/auto/
+
+# cask packages
+.cask/
+dist/
+
+# Flycheck
+flycheck_*.el
+
+# server auth directory
+/server/
+
+# projectiles files
+.projectile
+
+# directory configuration
+.dir-locals.el
+
+# network security
+/network-security.data
+
+# old doom emacs config
+/doom.d.bak/
+
+# Dolphin .directory file
+/.directory
+
+# End of https://www.toptal.com/developers/gitignore/api/emacs,dotfilessh
